--- a/index.html
+++ b/index.html
@@ -229,7 +229,12 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0"><a href="http://howtocryptocurrencies.com/">HowToCryptoCurrencies.com</a></h3>
-              <p>HowToCryptoCurrencies is the first website I built by myself it is written in Python and uses Django and Bootstrap. There are a number of different APIs I used in including {finish this}</p>
+              <p>HowToCryptoCurrencies is the first website I built by myself after completing the Python section at Coding Dojo. Crypto currency website is very popular and I thought that it would provide a great learning experience both in building the site and learning more about crypto currencies.</p>
+              <br>
+              <p>HowToCryptoCurrencies is somewhat of a mix between CoinMarketCap and a how-to site; like the domain name implies. Many of my classmates who are into crypto currencies often talked about CoinMarketCap a website with lots of information on a number of different crypto currencies. However, it didn’t tell visitors of the website how to go about buy these crypto currencies; something I saw as a flaw. That was the basis of the idea for HowToCrpytoCurrencies.com a mix of information of a number of cryptocurrencies in a format like CoinMarketCap; current price information and the top discussions from Reddit with additional information on how to buy crypto currencies.</p>
+              <br>
+              <p>I used python and Django to build HowToCryptoCurrencies with bootstrap on the front end to make the website perfectly responsive. Through the process of making the website I really came to appreciate how amazing bootstrap is and how it allows developers to quickly make something without having to worry about taking a whole bunch of additional steps to make it responsive.</p>
+              <br>
             </div>
           </div>
 
