--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <br>
               <p>HowToCryptoCurrencies is somewhat of a mix between CoinMarketCap and a how-to site as the domain name implies. Many of my classmates who are into crypto currencies often talked about CoinMarketCap, a website with lots of information on a number of different crypto currencies. However, that site didn’t tell visitors to the website how to go about buying these crypto currencies, something I saw as an oversight. This insight was the basis of the idea for HowToCrpytoCurrencies.com, a mix of information of a number of cryptocurrencies in a format like CoinMarketCap; current price information and the top discussions from Reddit with additional information on how to buy crypto currencies. </p>
               <br>
-              <p>I used python and Django to build HowToCryptoCurrencies with bootstrap on the front end to make the website perfectly responsive. Through the process of making the website I really came to appreciate how amazing bootstrap is and how it allows developers to quickly make something without having to worry about taking a whole bunch of additional steps to make it responsive. </p>
+              <p>I used python and Django to build HowToCryptoCurrencies with bootstrap on the front end to make the website perfectly responsive. Through the process of making the website I really came to appreciate how amazing bootstrap is and how it allows developers to quickly make something without having to worry about taking a whole bunch of additional steps to make it responsive. I am currently hosting the site on an Amazon Web Services (AWS) Ubuntu instance.</p>
               <br>
             </div>
           </div>
