--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
             <li class="list-inline-item">
               <i class="devicon-ubuntu-plain-wordmark"></i>
             </li>
+            <li class="list-inline-item">
+              <i class="devicon-swift-plain-wordmark"></i>
+            </li>
           </ul>
         </div>
       </section>
