Adding Swipe A Quote info

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Colin Rhys' portfolio site">
+    <meta name="author" content="Colin Rhys">
     <link rel="shortcut icon" type="image/png" href='img/resume_icon_sized.ico'/>
 
 
@@ -253,6 +253,26 @@
             <img src="img/image1.jpeg" alt="Desktop Pi Dashboard" class="img-thumbnail"><br>
           </div>
 
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"><a target="_blank" href="https://itunes.apple.com/us/app/swipe-a-quote/id1379841087?mt=8">Swipe A Quote</a></h3>
+              <p>Swipe A Quote is like Tinder but for quotes. You swipe the quotes you want to keep in your "My Saved Quotes" section to the right and the ones you do not to the left. The end result for the user is their own quote journal made up of the quotes that spoke to them.</p>
+              <br>
+              <p>Swipe A Quote was an app idea I had before attending the Coding Dojo. I had part of the app built before my time at the Coding Dojo began and finished a beta version of the app after finishing at the Coding Dojo. The app gets a quote and author from an API and put them on a Tinder like swipe card for the user to swipe to the left or the right. The text can then be saved to the "My Saved Quotes" section by the users. The users saved quotes can also be deleted later if the user decides they no longer want to save the quote. The app is only a beta version currently and there is much more functionality I want to add to Swipe A Quote to give the user a better experience and have more things to do in the app.</p>
+              <br>
+              <p>Be sure to watch the preview of Swipe a Quote below or download Swipe A Quote for yourself from the app store by clicking <a target="_blank" href="https://itunes.apple.com/us/app/swipe-a-quote/id1379841087?mt=8"> HERE</a> or the the title above</p>
+              
+              
+
+
+          <div class="text-center">
+            <video width="320" height="240" controls>
+              <source src="img/appPreviewWebsite.mp4" alt="Swipe A Quote" type="video/mp4">
+            </video>
+        </div>
             </div>
           </div>
 
