--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0"><a target="_blank" href="https://itunes.apple.com/us/app/swipe-a-quote/id1379841087?mt=8">Swipe A Quote</a></h3>
-              <p>Swipe A Quote is like Tinder but for quotes. You swipe the quotes you want to keep in your "My Saved Quotes" section to the right and the ones you do not to the left. The end result for the user is their own quote journal made up of the quotes that spoke to them.</p>
+              <p>An app I made that allows users to swipe through quotes and swipe a quote left to skip over it or right to save it to their “Saved Quotes”. The app features a free account and a premium account. With the free account a user can swipe through 15 quotes every 12 hours and save up to 25 quotes in their “Saved Quotes” at which point they are prompted to purchase a premium account. The premium account is an auto renewable subscription that allows users to both swipe through and save an unlimited number of quotes. All of the payments are processed through SwiftyStoreKit. There is also a website that I made for the app which is just a landing page. Take a look by clicking on the website <a target="_blank" href="www.swipeaquote.com.">www.swipeaquote.com</a>. </p>  
               <br>
               <p>Swipe A Quote was an app idea I had before attending the Coding Dojo. I had part of the app built before my time at the Coding Dojo began and finished a beta version of the app after finishing at the Coding Dojo. The app gets a quote and author from an API and put them on a Tinder like swipe card for the user to swipe to the left or the right. The text can then be saved to the "My Saved Quotes" section by the users. The users saved quotes can also be deleted later if the user decides they no longer want to save the quote. The app is only a beta version currently and there is much more functionality I want to add to Swipe A Quote to give the user a better experience and have more things to do in the app.</p>
               <br>
@@ -270,7 +270,7 @@
 
           <div class="text-center">
             <video width="320" height="240" controls>
-              <source src="img/appPreviewWebsite.mp4" alt="Swipe A Quote" type="video/mp4">
+              <source src="img/AppPreview5.5July10wikicopy.mp4" alt="Swipe A Quote" type="video/mp4">
             </video>
         </div>
             </div>
