adding MULTICOIN calc

--- a/index.html
+++ b/index.html
@@ -241,6 +241,17 @@
             </div>
           </div>
 
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"><a target="_blank" href="http://multicoincalc.com/">MultiCoinCalc.com</a></h3>
+              <p><a target="_blank" href="http://multicoincalc.com/">MultiCoinCalc</a> is a project I worked on with a classmate at the Coding Dojo. We both had an interest in crypto currencies and so decided that making an improved version of an existing website that only featured dollar to Bitcoin and a few other crypto currencies. Finding a good API for this project was a major first step. The API we found featured the US dollar and other fiat based currencies which was already more than the other website. Additionally, we found the API offered conversion information on a large number of crypto currencies. We choose to offer conversion for the five major fiat currencies to the top 100 crypto currencies.</p>
+              <br>
+              <p>A major challenge associated with this project was making an auto complete feature for the "Coin Name". Making it so that a user can enter either the ticker for the coin name or the full coin name. The API call needed the coin ticker and not the full coin name so we had to make a list of all of the coin names with the ticker symbols. This was a very time consuming tedious. With the list we were able to implement an auto complete feature so that if the user only knew the name of the coin the website can start to show a drop down menu with the guesses for the name of the coin which will be entered as the ticker for the coin when clicked on and make the correct API call returning accurate price information on the conversion.</p>
+              <br>
+            </div>
+          </div>
+
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Desk Raspberry Pi</h3>
