--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Junior Developer</h3>
+              <div class="subheading mb-3">Armarius Software</div>
+              <p>Was hired on a contract to speed up the completion of a Fullstack .NET project.The project was built using the Microsoft Azure ecosystem a SQL database hosted by Azure and the Website hosting by Azure. Short term contract because I completed the project sooner than expected and the funding for the work was no longer available.</p>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">October 2018 - October 2018</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Guaranteed Introducing Broker</h3>
               <div class="subheading mb-3">Straits Financial LLC</div>
               <p>Became a Guaranteed Introducing Broker to properly offer alternative investment services to an acquaintance who ws interested in diversifying his portfolio. I chose to end the relationship I had with Straits Financial once I began at Coding Dojo to allow myself to fully focus on my studies.</p>
@@ -228,6 +240,13 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Video Business Card</h3>
+              <p>The project I worked on at Armarius Software is a full stack web application allowing users to upload photos and information that then turns into their very own “Video Business Card” like a portfolio page without the user having to do any editing. The web application is a .Net project and uses Microsoft Azure to host the SQL database and website. I finished the project on time with all of the requirements fulfilled including additional features that were added as the project progressed. </p>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
