--- a/index.html
+++ b/index.html
@@ -318,6 +318,38 @@
         </div>
       </section>
 
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="books">
+
+          <div class="header">
+              <h1>Recent Reading List</h1>
+              <p>Here are some of the books I've read recently</p>
+            </div>
+
+        <div class="row"> 
+          <div class="column">
+            <img src="img/AndrewCarnegie.jpg" style="width:100%">
+            <img src="img/c6Point0.jpeg" style="width:100%">
+            <img src="img/theScienceOfBeing.jpg" style="width:100%">
+            <img src="img/ComputerBasedHourseRace.png" style="width:100%">
+            <img src="img/CRUSHINGHYPER-CASUALGAMES.jpeg" style="width:100%">
+            <img src="img/BobDylan.jpg" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="img/GettingPastNO.jpeg" style="width:100%">
+            <img src="img/LettersFromAStoic.jpg" style="width:100%">
+            <img src="img/life 3Point0.jpg" style="width:100%">
+            <img src="img/Papillon.jpg" style="width:100%">
+          </div>
+          <div class="column">
+              <img src="img/TheJoyOfPHP.jpg" style="width:100%">
+              <img src="img/theWarOfArt.jpg" style="width:100%">
+              <img src="img/theHouseOfMorgan.jpeg" style="width:100%">
+              <img src="img/theCrowd.jpg" style="width:100%">
+              <img src="img/CorneliusVanderbilt.jpg" style="width:100%">
+          </div>
+        </div>
+      </section>
+
     </div>
 
     <!-- Bootstrap core JavaScript -->
