changing first paragraph

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a href="mailto:colin.rhys@me.com">colin.rhys@me.com</a>
             
           </div>
-          <p class="mb-5">I am passionate about finance; when I was nine years old my mother explained to me why she would prefer buying me a happy meal at Taco Bell over McDonald's jokingly saying, “Since I own stock in Taco Bell but not in McDonalds, I make a little bit of money from everyone going to Taco Bell.” It was at this point that my love of the stock market and investing began. When I was fourteen I made my first trade, making one hundred dollars and after that there was no looking back.</p>
+          <p class="mb-5">I have worked in the finance industry as a commodity broker and at a boutique CTA. I have had a passion for finance ever since I made one hundred dollars on my first stock trade when I was fourteen. However after working in the finance industry what became more and more clear was that  tech was where the real innovation is happening in all industries. So rather than continuing to work as a commodity broker, I decided to improve my existing programing skills and make a career change to focus more on tech. I recently finished a contract role with a consulting firm where I built a full stack .Net web application which I finished ahead of schedule. I am excited about getting started with new role! Please to reach out if you think you have a role for me. </p>
           
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
