removing phone number

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
           <h1 class="mb-0">Colin
             <span class="text-primary">Rhys</span>
           </h1>
-          <div class="subheading mb-5">Chicago, IL · <a href="tel:503-432-7683">503-432-7683</a> ·
+          <div class="subheading mb-5">Chicago, IL · 
+            <!-- <a href="tel:503-432-7683">503-432-7683</a> · -->
             <a href="mailto:colin.rhys@me.com">colin.rhys@me.com</a>
             
           </div>
