updated Work and projects

--- a/index.html
+++ b/index.html
@@ -112,8 +112,20 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Junior Developer</h3>
+              <div class="subheading mb-3">Theron Technology Solutions</div>
+              <p>The project is for a multinational law firm with offices located throughout the world.  I was hired by Theron Technology Solutions as the only developer to work on the project collaborating directly with the client. Met with client side employees who will be users of the product to understand features they wanted in the end product. With minimal training on Ivanti, a third-party software, I led development of the project in conjunction with a technical architect. All features and processes required by the client are implemented and working with continued development ongoing.</p>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">January 2019 - Current</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Junior Developer</h3>
               <div class="subheading mb-3">Armarius Software</div>
-              <p>Was hired on a contract to speed up the completion of a Fullstack .NET project.The project was built using the Microsoft Azure ecosystem a SQL database hosted by Azure and the Website hosting by Azure. Short term contract because I completed the project sooner than expected and the funding for the work was no longer available.</p>
+              <p>I was hired on a contract to speed up the completion of a Fullstack .NET project.The project was built using the Microsoft Azure ecosystem a SQL database hosted by Azure and the Website hosting by Azure. Short term contract because I completed the project sooner than expected and the funding for the work was no longer available.</p>
 
             </div>
             <div class="resume-date text-md-right">
@@ -249,18 +261,6 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Video Business Card</h3>
               <p>The project I worked on at Armarius Software is a full stack web application allowing users to upload photos and information that then turns into their very own “Video Business Card” like a portfolio page without the user having to do any editing. The web application is a .Net project and uses Microsoft Azure to host the SQL database and website. I finished the project on time with all of the requirements fulfilled including additional features that were added as the project progressed. </p>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0"><a target="_blank" href="http://howtocryptocurrencies.com/">HowToCryptoCurrencies.com</a></h3>
-              <p><a target="_blank" href="http://howtocryptocurrencies.com/">HowToCryptoCurrencies</a> is the first website I built by myself after completing the Python course at Coding Dojo. Crypto currency websites are very popular and I thought that it would provide a great learning experience both in building the site and learning more about crypto currencies.</p>
-              <br>
-              <p>HowToCryptoCurrencies is somewhat of a mix between CoinMarketCap and a how-to site as the domain name implies. Many of my classmates who are into crypto currencies often talked about CoinMarketCap, a website with lots of information on a number of different crypto currencies. However, that site didn’t tell visitors to the website how to go about buying these crypto currencies, something I saw as an oversight. This insight was the basis of the idea for HowToCrpytoCurrencies.com, a mix of information of a number of cryptocurrencies in a format like CoinMarketCap; current price information and the top discussions from Reddit with additional information on how to buy crypto currencies. Additionally we made sure to make the website very simplistic in design and fully responsive to work on any screen size.</p>
-              <br>
-              <p>I used python and Django to build HowToCryptoCurrencies with bootstrap on the front end to make the website perfectly responsive. Through the process of making the website I really came to appreciate how amazing bootstrap is and how it allows developers to quickly make something without having to worry about taking a whole bunch of additional steps to make it responsive. I am currently hosting the site on an Amazon Web Services (AWS) Ubuntu instance.</p>
-              <br>
             </div>
           </div>
 
