updated Theron sectino

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Junior Developer</h3>
               <div class="subheading mb-3">Theron Technology Solutions</div>
-              <p>The project is for a multinational law firm with offices located throughout the world.  I was hired by Theron Technology Solutions as the only developer to work on the project collaborating directly with the client. Met with client side employees who will be users of the product to understand features they wanted in the end product. With minimal training on Ivanti, a third-party software, I led development of the project in conjunction with a technical architect. All features and processes required by the client are implemented and working with continued development ongoing.</p>
+              <p>I was hired as the only developer resource for the Theron team for a project for a multinational law firm. Learned to use third party software package without any prior knowledge. Worked directly with client side project manager, developer, users and directors on project.</p>
 
             </div>
             <div class="resume-date text-md-right">
