--- a/index.html
+++ b/index.html
@@ -111,13 +111,25 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Application Developer</h3>
+              <div class="subheading mb-3">Kirkland & Ellis LLP</div>
+              <p>The project I was working on for Theron Technology Solutions was for Kirkland and Ellis towards the end of the project Kirkland and Ellis approached me and asked if I would like to stay on and become a permanent employee.</p>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">January 2019 - December 2019</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Junior Developer</h3>
               <div class="subheading mb-3">Theron Technology Solutions</div>
               <p>I was hired as the only developer resource for the Theron team for a project for a multinational law firm. Learned to use third party software package without any prior knowledge. Worked directly with client side project manager, developer, users and directors on project.</p>
 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2019 - Current</span>
+              <span class="text-primary">January 2019 - December 2019</span>
             </div>
           </div>
 
@@ -125,7 +137,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Junior Developer</h3>
               <div class="subheading mb-3">Armarius Software</div>
-              <p>I was hired on a contract to speed up the completion of a Fullstack .NET project.The project was built using the Microsoft Azure ecosystem a SQL database hosted by Azure and the Website hosting by Azure. Short term contract because I completed the project sooner than expected and the funding for the work was no longer available.</p>
+              <p>I was hired on a contract to speed up the completion of a Fullstack .NET project. The project was built using the Microsoft Azure ecosystem a SQL database hosted by Azure and the Website hosting by Azure. Short term contract because I completed the project sooner than expected and the funding for the work was no longer available.</p>
 
             </div>
             <div class="resume-date text-md-right">
@@ -137,7 +149,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Guaranteed Introducing Broker</h3>
               <div class="subheading mb-3">Straits Financial LLC</div>
-              <p>Became a Guaranteed Introducing Broker to properly offer alternative investment services to an acquaintance who ws interested in diversifying his portfolio. I chose to end the relationship I had with Straits Financial once I began at Coding Dojo to allow myself to fully focus on my studies.</p>
+              <p>Became a Guaranteed Introducing Broker to properly offer alternative investment services to an acquaintance who was interested in diversifying his portfolio. I chose to end the relationship I had with Straits Financial once I began at Coding Dojo to allow myself to fully focus on my studies.</p>
 
             </div>
             <div class="resume-date text-md-right">
@@ -149,7 +161,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Broker</h3>
               <div class="subheading mb-3">PostRock Brokerage</div>
-              <p>During my time at PostRock Brokerage I furthered my knowledge of options and futures trading and the market forces at work. In addition, I have expanded my expertise of different futures and options markets, learning how they are used for more than just speculation. Although I learned a lot at PostRock Brokerage I realized I was not doing what I envisioned when I made my first trade at fourteen.</p>
+              <p>During my time at PostRock Brokerage I furthered my knowledge of options and futures trading and the market forces at work. In addition, I expanded my expertise of different futures and options markets, learning how they are used for more than just speculation. Although I learned a lot at PostRock Brokerage I realized I was not doing what I envisioned when I made my first trade at fourteen.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">November 2016 - February 2017</span>
@@ -176,23 +188,13 @@
           <h2 class="mb-5">Certifications</h2>
           
           <h3>Series 3 License</h3>
-          <p>The Series 3 is a securities license entitling the holder to sell commodities futures contracts and options on commodities futures contracts. Passing the Series 3 test allows anyone in the U.S. the right to offer alternative investments in commodities and futures securities.</p>
+          <p>The Series 3 is a securities license entitling the holder to sell commodities futures contracts and options on commodities futures contracts. Passing the Series 3 test allows anyone in the U.S. the right to offer alternative investments in commodities and futures securities. (Expired)</p>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Coding Dojo</h3>
-              <p>Intensive 14 week coding boot camp where I first learned Web Fundamentals: HTML, CSS and JavaScript and then two full stacks: Python/Django, C# /.NET as well utilizing different frameworks and technologies.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2017 - March 2018</span>
-            </div>
-          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
@@ -202,6 +204,16 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2011 - May 2015</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Coding Dojo</h3>
+              <p>Intensive 14 week coding boot camp where I first learned Web Fundamentals: HTML, CSS and JavaScript and then two full stacks: Python/Django, C# /.NET as well utilizing different frameworks and technologies.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">December 2017 - March 2018</span>
             </div>
           </div>
 
@@ -270,7 +282,7 @@
               <h3 class="mb-0"><a target="_blank" href="http://multicoincalc.com/">MultiCoinCalc.com</a></h3>
               <p><a target="_blank" href="http://multicoincalc.com/">MultiCoinCalc</a> is a project I worked on with a classmate at the Coding Dojo. We both had an interest in crypto currencies and so decided that making an improved version of an existing website that only featured dollar to Bitcoin and a few other crypto currencies. Finding a good API for this project was a major first step. The API we found featured the US dollar and other fiat based currencies which was already more than the other website. Additionally, we found the API offered conversion information on a large number of crypto currencies. We choose to offer conversion for the five major fiat currencies to the top 100 crypto currencies.</p>
               <br>
-              <p>A major challenge associated with this project was making an auto complete feature for the "Coin Name". Making it so that a user can enter either the ticker for the coin name or the full coin name. The API call needed the coin ticker and not the full coin name so we had to make a list of all of the coin names with the ticker symbols. This was a very time consuming tedious. With the list we were able to implement an auto complete feature so that if the user only knew the name of the coin the website can start to show a drop down menu with the guesses for the name of the coin which will be entered as the ticker for the coin when clicked on and make the correct API call returning accurate price information on the conversion.</p>
+              <p>A major challenge associated with this project was making an auto complete feature for the "Coin Name", so that a user can enter either the ticker for the coin name or the full coin name. The API call needed the coin ticker and not the full coin name so we had to make a list of all of the coin names with the ticker symbols. With the list we were able to implement an auto complete feature so that if the user only knew the name of the coin the website can start to show a drop down menu with the guesses for the name of the coin which will be entered as the ticker for the coin when clicked on and make the correct API call returning accurate price information on the conversion.</p>
               <br>
             </div>
           </div>
@@ -278,9 +290,9 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Desk Raspberry Pi</h3>
-              <p>Before I began at the Coding Dojo I had heard of Raspberry Pi's and thought they were super cool. I initially wanted to make an old-fashioned scrolling stock ticker with LED lights. Once I started researching the project I found that it would be cheaper to buy the official touch screen made by the Raspberry Pi foundation. I also found the Magic Mirror project (Click Here For Website) and though I could use it as a base to make more than just a simple scrolling stock ticker. I wanted to reformat the display to be more of an information dashboard rather than a mirror. This presented a bit of a challenge because the default formatting was not a dashboard like setting. I overcame this challenge by creating my own CSS class that used the full screen. With this new class in place I was able to fit the scrolling stock ticker that I originally wanted and a lot of other cool modules on my display. All of the modules use their own APIs for the data that is being fed into and displayed on the screen.</p>
+              <p>Before I began at the Coding Dojo I had heard of Raspberry Pi's and thought they were super cool. I initially wanted to make an old-fashioned scrolling stock ticker with LED lights. Once I started researching the project I found that it would be cheaper to buy the official touch screen made by the Raspberry Pi foundation. I wanted to reformat the display to be more of an information dashboard rather than a mirror. This presented a bit of a challenge because the default formatting was not a dashboard like setting. I overcame this challenge by creating my own CSS class that used the full screen. With this new class in place I was able to fit the scrolling stock ticker that I originally wanted and a lot of other cool modules on my display. All of the modules use their own APIs for the data that is being fed into and displayed on the screen.</p>
               <br>
-              <p>The module for the stock ticker at the bottom of the screen initially showed the 0's of unchanged stocks as red. I thought it would be better to have them be grey a neutral color and different than the white of the stock ticker symbols. I added an “ if check” for the stock change being zero and created a new CSS class for unchanged stocks that makes the 0 grey. After changing the code and making sure it worked I opened a pull request on gitHub so everyone else could have grey zeros too.</p>
+              <p>The module for the stock ticker at the bottom of the screen initially showed the 0's of unchanged stocks as red. I thought it would be better to have them be grey a neutral color and different than the white of the stock ticker symbols. I added an “if check” for the stock change being zero and created a new CSS class for unchanged stocks that makes the 0 grey. After changing the code and making sure it worked I opened a pull request on gitHub so everyone else could have grey zeros too.</p>
 
 
           <div class="text-center">
