Fixed dates on Kirkland and Ellis

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2019 - December 2019</span>
+              <span class="text-primary">January 2020 - Current</span>
             </div>
           </div>
 
