update of experince

--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
             <span class="text-primary">Rhys</span>
           </h1>
           <div class="subheading mb-5">Chicago, IL · 
-            <!-- <a href="tel:503-432-7683">503-432-7683</a> · -->
             <a href="mailto:colin.rhys@me.com">colin.rhys@me.com</a>
             
           </div>
-          <p class="mb-5">I have worked in the finance industry as a commodity broker and at a boutique CTA. I have had a passion for finance ever since I made one hundred dollars on my first stock trade when I was fourteen. However after working in the finance industry what became more and more clear was that  tech was where the real innovation is happening in all industries. So rather than continuing to work as a commodity broker, I decided to improve my existing programing skills and make a career change to focus more on tech. I recently finished a contract role with a consulting firm where I built a full stack .Net web application which I finished ahead of schedule. I am excited about getting started with new role! Please to reach out if you think you have a role for me. </p>
+          <p class="mb-5">Software Developer with a track record of success working on projects for Fortune 500 firms and smaller boutique firms. I chose a career in the tech field because it constantly evolves, and as a developer I have the unique opportunity to continuously learn and bring my creative thinking skills to bear on thorny problems.</p>
           
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
@@ -109,6 +108,27 @@
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
 
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Technical Paradigm</h3>
+              <div class="subheading mb-3">Technical Paradigm</div>
+              <p>Worked for two separate clients for Technical Paradigm</p>
+              <br>
+              <p>Local Chicago based digital marketing agency working as a manger:</p>
+              <p>- Manage the development team for a well-established digital design agency located in Chicago.</p>
+              <p>- Additionally, work on creating processes for the development team to increase efficiency and profitability. Work directly with multiple departments and stakeholders.</p>
+              <br>
+              <p>FinTech Startup working as a developer:</p>
+              <p>- Developed Docker container to run fintech Java stack in Tomcat for deployment into Kubernetes.</p> 
+              <p>- Worked with Java unit and integration tests demonstrating functionality of fintech backend code.</p> 
+              <p>- Worked with Python and Java codebase prototyping API integration for account enrichment.</p>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">January 2020 - June 2020</span>
+            </div>
+          </div>
+
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Application Developer</h3>
@@ -117,7 +137,7 @@
 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2020 - Current</span>
+              <span class="text-primary">January 2020 - June 2020</span>
             </div>
           </div>
 
@@ -142,18 +162,6 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2018 - October 2018</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Guaranteed Introducing Broker</h3>
-              <div class="subheading mb-3">Straits Financial LLC</div>
-              <p>Became a Guaranteed Introducing Broker to properly offer alternative investment services to an acquaintance who was interested in diversifying his portfolio. I chose to end the relationship I had with Straits Financial once I began at Coding Dojo to allow myself to fully focus on my studies.</p>
-
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2017 - December 2017</span>
             </div>
           </div>
 
@@ -204,16 +212,6 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2011 - May 2015</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Coding Dojo</h3>
-              <p>Intensive 14 week coding boot camp where I first learned Web Fundamentals: HTML, CSS and JavaScript and then two full stacks: Python/Django, C# /.NET as well utilizing different frameworks and technologies.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2017 - March 2018</span>
             </div>
           </div>
 
