things forgot to update

--- a/index.html
+++ b/index.html
@@ -110,7 +110,19 @@
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Technical Paradigm</h3>
+              <h3 class="mb-0">Node40</h3>
+              <div class="subheading mb-3">Software Engineer</div>
+              <p>Worked directly with lead developer, CTO and other stakeholders on new features and updating legacy codebase. I was the first hire for the backend team when the company was less than 10 people (we all fit on one Google meet screen) the Node40 team grew and I became part of the Retail Team.</p>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">April 2021 - January 2023</span>
+            </div>
+          </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Consulting Manager</h3>
               <div class="subheading mb-3">Technical Paradigm</div>
               <p>Worked for two separate clients for Technical Paradigm</p>
               <br>
@@ -125,7 +137,7 @@
 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2020 - June 2020</span>
+              <span class="text-primary">November 2020 - April 2021</span>
             </div>
           </div>
 
