--- a/index.html
+++ b/index.html
@@ -109,6 +109,23 @@
           <h2 class="mb-5">Experience</h2>
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">Private Contract</h3>
+                <div class="subheading mb-3">Senior Developer</div>
+                <p>Backend Development: Architecting and implementing robust backend services using
+                  Rust with the Actix-Web framework, leveraging Diesel as the ORM for efficient
+                  database operations with a PostgreSQL database. Frontend Development: Designing and constructing the user interface with React,
+                  ensuring a responsive and intuitive user experience. Authentication and Payment Integration: Integrating Auth0 to manage user
+                  authentication securely and Stripe to process payments, facilitating a seamless and secure
+                  transactional flow.</p>
+
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-primary">March 2023 - Current</span>
+              </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Node40</h3>
               <div class="subheading mb-3">Software Engineer</div>
@@ -123,8 +140,8 @@
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Consulting Manager</h3>
-              <div class="subheading mb-3">Technical Paradigm</div>
-              <p>Worked for two separate clients for Technical Paradigm</p>
+              <div class="subheading mb-3">Private Contract</div>
+              <p>Worked for two separate clients at the same time</p>
               <br>
               <p>Local Chicago based digital marketing agency working as a manger:</p>
               <p>- Manage the development team for a well-established digital design agency located in Chicago.</p>
@@ -145,7 +162,13 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Application Developer</h3>
               <div class="subheading mb-3">Kirkland & Ellis LLP</div>
-              <p>The project I was working on for Theron Technology Solutions was for Kirkland and Ellis towards the end of the project Kirkland and Ellis approached me and asked if I would like to stay on and become a permanent employee.</p>
+              <p>Hired full-time as key to achieving success with a mission-critical project for
+                Kirkland Ellis; only employee of Theron approached to become a Kirkland employee. Continued to work on the same project firm-wide C# .net Core project I was initially
+                working on as a Theron employee in addition to other firm-wide projects using other
+                technologies. Served on a team developing an additional firm-wide application using the same
+                third-party software, working collaboratively to define key processes and establish
+                procedures. Consulted with end users, project stakeholders, and directors to determine project
+                requirements, find efficiencies, problem-solve, and establish timelines.</p>
 
             </div>
             <div class="resume-date text-md-right">
@@ -155,7 +178,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Developer</h3>
+              <h3 class="mb-0">Developer</h3>
               <div class="subheading mb-3">Theron Technology Solutions</div>
               <p>I was hired as the only developer resource for the Theron team for a project for a multinational law firm. Learned to use third party software package without any prior knowledge. Worked directly with client side project manager, developer, users and directors on project.</p>
 
