--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Broker</h3>
               <div class="subheading mb-3">PostRock Brokerage</div>
-              <p>During my time at PostRock Brokerage I furthered my knowledge of options and futures trading and the market forces at work. In addition, I expanded my expertise of different futures and options markets, learning how they are used for more than just speculation. Although I learned a lot at PostRock Brokerage I realized I was not doing what I envisioned when I made my first trade at fourteen.</p>
+              <p>During my time at PostRock Brokerage I furthered my knowledge of options and futures trading and the market forces at work. In addition, I expanded my expertise of different futures and options markets, learning how they are used for more than just speculation. Although I learned a lot at PostRock Brokerage I realized I was not doing what I envisioned when I made my first trade at fourteen. I made  a lot of cold calls and got even better at talking to be people on the phone. "No" no longer scarred me after this.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">November 2016 - February 2017</span>
